--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button{
+  position: relative;
+  border: none;
+  background: transparent;
+  font-weight: 700;
+}
+select{
+  height: 38px;
+}
+
+.upsort:before{
+  position: absolute;
+  content: '▲';
+  top: 0px;
+  right: -10px;
+}
+
+.downsort:before{
+  position: absolute;
+  content: '▼';
+  top: 0px;
+  right: -10px;
+}
+
+.wrapper{
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
